--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -162,7 +162,7 @@ LastLevel=/Game/DragonWord/MAP/LevelOne
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Appearance.Brush\" "
+Object="\"Object\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -277,15 +277,15 @@ ProceduralShapeToolProperties="\"Object\" "
 NewMeshMaterialProperties="\"Object\" "
 MainMenu_WB_C="\"Object\" "
 UserWidget="\"Object\" "
-Widget="\"Object\" \"Object.Appearance.Brush\" "
-Visual="\"Object\" \"Object.Appearance.Brush\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
 CanvasPanel="\"Object\" "
 PanelWidget="\"Object\" "
 TextBlock="\"Object\" \"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" "
 Image="\"Object\" \"Object.Appearance.Brush\" "
-Button="\"Object\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" "
-ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" "
+Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" "
+ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" "
 BaseBtn_WB_C="\"Object\" "
 K2Node_MakeStruct="\"Object\" "
 K2Node_StructMemberSet="\"Object\" "
@@ -314,6 +314,9 @@ BackgroundBlur="\"Object\" "
 AudioSlider="\"Object\" "
 AudioSliderBase="\"Object\" "
 AudioVolumeSlider="\"Object\" "
+Texture2D="\"Object\" "
+Texture="\"Object\" "
+StreamableRenderAsset="\"Object\" "
 
 [DetailCategories]
 WorldSettings.GameMode=True
@@ -948,14 +951,28 @@ AudioVolumeSlider.Clipping=True
 AudioVolumeSlider.Navigation=True
 AudioVolumeSlider.Localization=True
 AudioVolumeSlider.Events=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compression=True
+Texture2D.Interchange =True
+Texture2D.Texture=True
+Texture2D.Adjustments=True
+Texture2D.File Path=True
+Texture2D.Compositing=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/UI/Instruction_WB.Instruction_WB
-OpenAssetsAtExit=/Game/UI/MainMenu_WB.MainMenu_WB
+OpenAssetsAtExit=/Game/UI/Highscore_WB.Highscore_WB
 OpenAssetsAtExit=/Game/UI/StageMap_WB.StageMap_WB
-OpenAssetsAtExit=/Game/UI/Win_WB.Win_WB
+OpenAssetsAtExit=/Game/UI/BaseBtn_WB.BaseBtn_WB
 OpenAssetsAtExit=/Game/UI/Setting_WB.Setting_WB
+OpenAssetsAtExit=/Game/UI/VocabSetting_WB.VocabSetting_WB
+OpenAssetsAtExit=/Game/UI/Add_Vocab_WB.Add_Vocab_WB
+OpenAssetsAtExit=/Game/UI/Lose_WB.Lose_WB
+OpenAssetsAtExit=/Game/UI/MainMenu_WB.MainMenu_WB
+OpenAssetsAtExit=/Game/UI/Pause_WB.Pause_WB
+OpenAssetsAtExit=/Game/UI/Remove_Vocab_WB.Remove_Vocab_WB
+OpenAssetsAtExit=/Game/UI/Win_WB.Win_WB
 
 [RootWindow]
 ScreenPosition=X=-1544.000 Y=113.000
@@ -1012,7 +1029,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/UI/assets
+ContentBrowserDrawer.SelectedPaths=/Game/UI
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -2048,19 +2065,21 @@ MRUItem0=/Game/DragonWord/MAP/LevelOne
 MRUItem1=/Game/DragonWord/MAP/TestMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/Instruction_WB
-MRUItem1=/Game/UI/Setting_WB
+MRUItem0=/Game/UI/Win_WB
+MRUItem1=/Game/UI/Remove_Vocab_WB
 MRUItem2=/Game/UI/Pause_WB
-MRUItem3=/Game/UI/Lose_WB
-MRUItem4=/Game/UI/MainMenu_WB
+MRUItem3=/Game/UI/MainMenu_WB
+MRUItem4=/Game/UI/Lose_WB
 MRUItem5=/Game/UI/Add_Vocab_WB
-MRUItem6=/Game/UI/StageMap_WB
-MRUItem7=/Game/UI/Win_WB
-MRUItem8=/Game/UI/Remove_Vocab_WB
-MRUItem9=/Game/UI/BaseBtn_WB
-MRUItem10=/Game/UI/VocabSetting_WB
-MRUItem11=/Game/DragonWord/MAP/LevelOne
-MRUItem12=/Game/DragonWord/MAP/TestMap
+MRUItem6=/Game/UI/BaseBtn_WB
+MRUItem7=/Game/UI/VocabSetting_WB
+MRUItem8=/Game/UI/Highscore_WB
+MRUItem9=/Game/UI/instruction
+MRUItem10=/Game/UI/Setting_WB
+MRUItem11=/Game/UI/StageMap_WB
+MRUItem12=/Game/UI/Instruction_WB
+MRUItem13=/Game/DragonWord/MAP/LevelOne
+MRUItem14=/Game/DragonWord/MAP/TestMap
 
 [LandscapeEdit]
 PaintToolStrength=0.300000012
@@ -2099,7 +2118,7 @@ Panel=False
 Primitive=False
 Special Effects=True
 Synth=False
-User Created=False
+User Created=True
 Advanced=True
 
 [UMGEditor.Designer]
@@ -2185,6 +2204,8 @@ Slider.Appearance=True
 /Game/UI/Remove_Vocab_WB.Remove_Vocab_WB=1
 /Game/UI/Lose_WB.Lose_WB=1
 /Game/UI/Pause_WB.Pause_WB=1
+/Game/UI/instruction.instruction=1
+/Game/UI/Win_WB.Win_WB=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2229,4 +2250,18 @@ PerBlueprintSettings=()
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+bSCCUseGlobalSettings=False
+bAutomaticallyCheckoutOnAssetModification=False
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
 
