--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -162,7 +162,7 @@ LastLevel=/Game/DragonWord/MAP/LevelOne
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Appearance.Font\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -277,15 +277,15 @@ ProceduralShapeToolProperties="\"Object\" "
 NewMeshMaterialProperties="\"Object\" "
 MainMenu_WB_C="\"Object\" "
 UserWidget="\"Object\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+Widget="\"Object\" \"Object.Appearance.Font\" "
+Visual="\"Object\" \"Object.Appearance.Font\" "
 CanvasPanel="\"Object\" "
 PanelWidget="\"Object\" "
 TextBlock="\"Object\" \"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" "
-Image="\"Object\" \"Object.Appearance.Brush\" "
-Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" "
-ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" "
+Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" "
+Button="\"Object\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" "
+ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" "
 BaseBtn_WB_C="\"Object\" "
 K2Node_MakeStruct="\"Object\" "
 K2Node_StructMemberSet="\"Object\" "
@@ -317,6 +317,8 @@ AudioVolumeSlider="\"Object\" "
 Texture2D="\"Object\" "
 Texture="\"Object\" "
 StreamableRenderAsset="\"Object\" "
+CheckBox="\"Object\" "
+Play_WB_C="\"Object\" "
 
 [DetailCategories]
 WorldSettings.GameMode=True
@@ -953,26 +955,45 @@ AudioVolumeSlider.Localization=True
 AudioVolumeSlider.Events=True
 Texture2D.LevelOfDetail=True
 Texture2D.Compression=True
-Texture2D.Interchange =True
+Texture2D.Interchange=True
 Texture2D.Texture=True
 Texture2D.Adjustments=True
 Texture2D.File Path=True
 Texture2D.Compositing=True
+CheckBox.Layout=True
+CheckBox.Appearance=True
+CheckBox.Style=True
+CheckBox.Accessibility=True
+CheckBox.Interaction=True
+CheckBox.Behavior=True
+CheckBox.Render Transform=True
+CheckBox.Performance=True
+CheckBox.Clipping=True
+CheckBox.Navigation=True
+CheckBox.Localization=True
+CheckBox.Events=True
+Play_WB_C.Appearance=True
+Play_WB_C.Designer=True
+Play_WB_C.Input=True
+Play_WB_C.Interaction=True
+Play_WB_C.Performance=True
+Play_WB_C.Layout=True
+Play_WB_C.Behavior=True
+Play_WB_C.Render Transform=True
+Play_WB_C.Localization=True
+Play_WB_C.Accessibility=True
+Play_WB_C.Clipping=True
+Play_WB_C.Navigation=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/UI/Instruction_WB.Instruction_WB
-OpenAssetsAtExit=/Game/UI/Highscore_WB.Highscore_WB
-OpenAssetsAtExit=/Game/UI/StageMap_WB.StageMap_WB
-OpenAssetsAtExit=/Game/UI/BaseBtn_WB.BaseBtn_WB
-OpenAssetsAtExit=/Game/UI/Setting_WB.Setting_WB
-OpenAssetsAtExit=/Game/UI/VocabSetting_WB.VocabSetting_WB
-OpenAssetsAtExit=/Game/UI/Add_Vocab_WB.Add_Vocab_WB
-OpenAssetsAtExit=/Game/UI/Lose_WB.Lose_WB
-OpenAssetsAtExit=/Game/UI/MainMenu_WB.MainMenu_WB
-OpenAssetsAtExit=/Game/UI/Pause_WB.Pause_WB
-OpenAssetsAtExit=/Game/UI/Remove_Vocab_WB.Remove_Vocab_WB
 OpenAssetsAtExit=/Game/UI/Win_WB.Win_WB
+OpenAssetsAtExit=/Game/UI/Pause_WB.Pause_WB
+OpenAssetsAtExit=/Game/UI/Play_WB.Play_WB
+OpenAssetsAtExit=/Game/UI/StageMap_WB.StageMap_WB
+OpenAssetsAtExit=/Game/UI/Lose_WB.Lose_WB
+OpenAssetsAtExit=/Game/UI/Add_Vocab_WB.Add_Vocab_WB
+OpenAssetsAtExit=/Game/UI/Instruction_WB.Instruction_WB
 
 [RootWindow]
 ScreenPosition=X=-1544.000 Y=113.000
@@ -2065,21 +2086,22 @@ MRUItem0=/Game/DragonWord/MAP/LevelOne
 MRUItem1=/Game/DragonWord/MAP/TestMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/Win_WB
-MRUItem1=/Game/UI/Remove_Vocab_WB
-MRUItem2=/Game/UI/Pause_WB
-MRUItem3=/Game/UI/MainMenu_WB
-MRUItem4=/Game/UI/Lose_WB
-MRUItem5=/Game/UI/Add_Vocab_WB
-MRUItem6=/Game/UI/BaseBtn_WB
-MRUItem7=/Game/UI/VocabSetting_WB
-MRUItem8=/Game/UI/Highscore_WB
-MRUItem9=/Game/UI/instruction
-MRUItem10=/Game/UI/Setting_WB
-MRUItem11=/Game/UI/StageMap_WB
-MRUItem12=/Game/UI/Instruction_WB
-MRUItem13=/Game/DragonWord/MAP/LevelOne
-MRUItem14=/Game/DragonWord/MAP/TestMap
+MRUItem0=/Game/UI/Instruction_WB
+MRUItem1=/Game/UI/Add_Vocab_WB
+MRUItem2=/Game/UI/Lose_WB
+MRUItem3=/Game/UI/StageMap_WB
+MRUItem4=/Game/UI/Play_WB
+MRUItem5=/Game/UI/Pause_WB
+MRUItem6=/Game/UI/Win_WB
+MRUItem7=/Game/UI/Remove_Vocab_WB
+MRUItem8=/Game/UI/MainMenu_WB
+MRUItem9=/Game/UI/BaseBtn_WB
+MRUItem10=/Game/UI/VocabSetting_WB
+MRUItem11=/Game/UI/Highscore_WB
+MRUItem12=/Game/UI/instruction
+MRUItem13=/Game/UI/Setting_WB
+MRUItem14=/Game/DragonWord/MAP/LevelOne
+MRUItem15=/Game/DragonWord/MAP/TestMap
 
 [LandscapeEdit]
 PaintToolStrength=0.300000012
