--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -132,7 +132,7 @@ ManualIPAddress=
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
 HardwareCursors=()
-SoftwareCursors=()
+SoftwareCursors=((Default, "/Game/DragonWord/HUD/WB_Cursor.WB_Cursor_C"))
 ApplicationScale=1.000000
 UIScaleRule=ShortestSide
 CustomScalingRuleClass=None
