--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -248,16 +248,16 @@ CrowdManager=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.
 DataDrivenConsoleVariableSettings=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
 DebugCameraControllerSettings=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
 EnhancedInputDeveloperSettings=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
-InputModifierDeadZone=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
-InputModifierResponseCurveExponential=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
-InputModifierFOVScaling=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
-InputTriggerDown=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
-InputTriggerPressed=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
-InputTriggerReleased=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
-InputTriggerHold=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
-InputTriggerHoldAndRelease=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
-InputTriggerTap=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
-InputTriggerPulse=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
+InputModifierDeadZone=
+InputModifierResponseCurveExponential=
+InputModifierFOVScaling=
+InputTriggerDown=
+InputTriggerPressed=
+InputTriggerReleased=
+InputTriggerHold=
+InputTriggerHoldAndRelease=
+InputTriggerTap=
+InputTriggerPulse=
 EnhancedInputEditorProjectSettings=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
 GameplayDebuggerConfig=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
 GarbageCollectionSettings=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
@@ -319,10 +319,10 @@ PaperRuntimeSettings=InputSettings.Bindings.ActionMappings.SteInteraction,InputS
 PythonScriptPluginSettings=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
 ResonanceAudioSettings=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
 TakeRecorderProjectSettings=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
-MovieSceneTakeSettings=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
-TakeRecorderMicrophoneAudioSourceSettings=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
-MovieSceneAnimationTrackRecorderEditorSettings=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
-TakeRecorderWorldSourceSettings=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
+MovieSceneTakeSettings=
+TakeRecorderMicrophoneAudioSourceSettings=
+MovieSceneAnimationTrackRecorderEditorSettings=
+TakeRecorderWorldSourceSettings=
 TcpMessagingSettings=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
@@ -2136,12 +2136,7 @@ Platform_C.TransformCommon=True
 Platform_C.Networking=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/DragonWord/BPObjects/Platform.Platform
-OpenAssetsAtExit=/Game/DragonWord/Player/StefanoPlayer.StefanoPlayer
-OpenAssetsAtExit=/Game/DragonWord/BPObjects/FinalGateLV1.FinalGateLV1
-OpenAssetsAtExit=/Game/DragonWord/BPObjects/Word.Word
-OpenAssetsAtExit=/Game/DragonWord/BPObjects/Switch.Switch
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=853.000 Y=161.000
@@ -2178,7 +2173,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.748840034
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/DragonWord/BPObjects
+ContentBrowserTab1.SelectedPaths=/Game/DragonWord/MAP
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
