--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -2174,6 +2174,12 @@ ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserTab1.SelectedPaths=/Game/DragonWord/InterfaceFunctions
+ContentBrowserTab1.SelectedPaths=/Game/DragonWord/MAP
+None=======
+None=======
+None=======
+None=======
+None=======
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2209,10 +2215,6 @@ SequenceBrowser.HiddenColumns=ParentAsset
 SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
 SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
-None=======
-None=======
-None=======
-None=======
 ContentBrowserTab3.SourcesExpanded=True
 ContentBrowserTab3.FavoritesAreaExpanded=False
 ContentBrowserTab3.PathAreaExpanded=True
