--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -88,7 +88,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=-2262,Y=106)
+NewWindowPosition=(X=-1523,Y=104)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -124,7 +124,7 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
-MultipleInstancePositions=(X=-2262,Y=106)
+MultipleInstancePositions=(X=-1523,Y=104)
 NewWindowWidth=1120
 NewWindowHeight=783
 
@@ -172,7 +172,7 @@ UserDefinedStruct=
 STRUCT_Vocab=
 STRUCT_VocabCategory=
 SYS_PlayerStat_C=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Combo,PropertyWrapper.DefaultValueCategory.AssignAbillity,BP_EnemyBase_C.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Attack Anim,PropertyWrapper.DefaultValueCategory.Jump Attack Anim,SphereComponent.Collision.Collision,K2Node_CustomEvent.Inputs.6831CB3B4138619BD4EE8DB37136DFB3,K2Node_VariableGet.DefaultValueCategory.Effects,BP_WizardPlayer_C.Materials.MaterialList,BP_WizardPlayer_C.Physics.ConstraintsGroup,
-CapsuleComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Combo,PropertyWrapper.DefaultValueCategory.AssignAbillity,BP_EnemyBase_C.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Attack Anim,PropertyWrapper.DefaultValueCategory.Jump Attack Anim,SphereComponent.Collision.Collision,K2Node_CustomEvent.Inputs.6831CB3B4138619BD4EE8DB37136DFB3,K2Node_VariableGet.DefaultValueCategory.Effects,BP_WizardPlayer_C.Materials.MaterialList,BP_WizardPlayer_C.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.AssignAbillity,BoxComponent.Physics.ConstraintsGroup,BP_Enemy_Boss_C.TransformCommon.Transform,
+CapsuleComponent=
 EdGraph=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Combo,PropertyWrapper.DefaultValueCategory.AssignAbillity,BP_EnemyBase_C.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Attack Anim,PropertyWrapper.DefaultValueCategory.Jump Attack Anim,SphereComponent.Collision.Collision,K2Node_CustomEvent.Inputs.6831CB3B4138619BD4EE8DB37136DFB3,K2Node_VariableGet.DefaultValueCategory.Effects,BP_WizardPlayer_C.Materials.MaterialList,BP_WizardPlayer_C.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.AssignAbillity,BoxComponent.Physics.ConstraintsGroup,
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Combo,PropertyWrapper.DefaultValueCategory.AssignAbillity,BP_EnemyBase_C.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Attack Anim,PropertyWrapper.DefaultValueCategory.Jump Attack Anim,SphereComponent.Collision.Collision,K2Node_CustomEvent.Inputs.6831CB3B4138619BD4EE8DB37136DFB3,K2Node_VariableGet.DefaultValueCategory.Effects,BP_WizardPlayer_C.Materials.MaterialList,BP_WizardPlayer_C.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.AssignAbillity,BoxComponent.Physics.ConstraintsGroup,
@@ -497,7 +497,7 @@ VolumetricCloudComponent="\"Object\" "
 ExponentialHeightFogComponent="\"Object\" "
 StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object\" \"Object.Shape.ShapeColor\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object\" "
 InputAction="\"Object\" "
 DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 PlayerMappableInputConfig="\"Object\" \"Object.Input.Input|PlayerMappable\" "
@@ -506,10 +506,10 @@ InputMappingContext="\"Object\" "
 SkeletalMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkinnedMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CapsuleComponent="\"Object\" "
-ShapeComponent="\"Object\" \"Object.Shape.ShapeColor\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ShapeComponent="\"Object\" "
 BP_WizardPlayer_C="\"Object\" \"Object.Combo\" "
-Character="\"Object\" \"Object.Combo\" "
-Pawn="\"Object\" \"Object.Combo\" "
+Character="\"Object\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Actor.Tags\" "
+Pawn="\"Object\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Actor.Tags\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
 AssetViewerSettings="\"Object\" "
@@ -4085,8 +4085,8 @@ PhysicsAssetEditor.LastCompileMethod=Unknown
 [Python]
 LastDirectory=
 RecentsFiles=C:/Program Files/Unreal/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Unreal/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
 MRUItem0=/Game/DragonWord/MAP/LevelOne
