--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/DragonWord/MAP/LevelOne.LevelOne
 EditorStartupMap=/Game/DragonWord/MAP/LevelOne.LevelOne
+GlobalDefaultGameMode=/Game/DragonWord/Setting/GM_PlayMode.GM_PlayMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
