Removed Stefano Player

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -159,7 +159,7 @@ CurrentRotGridSize=0
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails,
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 InputMappingContext=InputMappingContext.Mappings.ActionMappings./Game/DragonWord/InputSystem/IA_Shift.IA_Shift,InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/DragonWord/InputSystem/IA_Attack.IA_Attack,InputMappingContext.Mappings.ActionMappings./Game/DragonWord/InputSystem/IA_Jump.IA_Jump,InputMappingContext.Mappings.ActionMappings./Game/DragonWord/InputSystem/IA_WASD.IA_WASD,InputMappingContext.Mappings.ActionMappings./Game/DragonWord/InputSystem/SteInteraction.SteInteraction,InputMappingContext.Mappings.ActionMappings./Game/DragonWord/InputSystem/IA_Mouse.IA_Mouse,
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,PropertyWrapper.DefaultValueCategory.lettersCollected,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,PropertyWrapper.DefaultValueCategory.WordsCollected,K2Node_VariableGet.DefaultValueCategory.wordRequired,K2Node_VariableGet.DefaultValueCategory.WordsCollected,PropertyWrapper.DefaultValueCategory.words,
@@ -170,7 +170,7 @@ None=======
 None=======
 SkeletalMeshComponent=
 K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,
-CapsuleComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,PropertyWrapper.DefaultValueCategory.WordsCollected,K2Node_VariableGet.DefaultValueCategory.wordRequired,K2Node_VariableGet.DefaultValueCategory.WordsCollected,PropertyWrapper.DefaultValueCategory.words,
+CapsuleComponent=
 SceneComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,PropertyWrapper.DefaultValueCategory.WordsCollected,K2Node_VariableGet.DefaultValueCategory.wordRequired,K2Node_VariableGet.DefaultValueCategory.WordsCollected,PropertyWrapper.DefaultValueCategory.words,
 Landscape=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,PropertyWrapper.DefaultValueCategory.WordsCollected,K2Node_VariableGet.DefaultValueCategory.wordRequired,K2Node_VariableGet.DefaultValueCategory.WordsCollected,PropertyWrapper.DefaultValueCategory.words,
 StaticMeshActor=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,PropertyWrapper.DefaultValueCategory.WordsCollected,K2Node_VariableGet.DefaultValueCategory.wordRequired,K2Node_VariableGet.DefaultValueCategory.WordsCollected,PropertyWrapper.DefaultValueCategory.words,
@@ -205,7 +205,7 @@ ActorComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshCompon
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,
 EdGraph=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,EdGraph.Inputs.44DD37C343AF39EDBBE7A0B7C1BB41A0,EdGraph.Inputs.A536FF48462B8A211C924081323ED53A,EdGraph.Inputs.CC9162934B455CAEF895D299C06A44FB,EdGraph.Inputs.CECA990B43A1E58E4C6A9195EC3551B2,EdGraph.Inputs.2CA78E2844A58D396177288BE566FD0C,EdGraph.Inputs.90CF258D47B9A290F566A183B333C6A9,EdGraph.Inputs.E81EA00F42F28D1955EC3DA028D87A21,
 Blueprint=
-StefanoPlayer_C=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,PropertyWrapper.DefaultValueCategory.WordsCollected,K2Node_VariableGet.DefaultValueCategory.wordRequired,K2Node_VariableGet.DefaultValueCategory.WordsCollected,
+StefanoPlayer_C=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,PropertyWrapper.DefaultValueCategory.WordsCollected,K2Node_VariableGet.DefaultValueCategory.wordRequired,K2Node_VariableGet.DefaultValueCategory.WordsCollected,PropertyWrapper.DefaultValueCategory.words,
 K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,
 PlayerStart=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,PropertyWrapper.DefaultValueCategory.lettersCollected,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,PropertyWrapper.DefaultValueCategory.WordsCollected,K2Node_VariableGet.DefaultValueCategory.wordRequired,K2Node_VariableGet.DefaultValueCategory.WordsCollected,PropertyWrapper.DefaultValueCategory.words,
 K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,PropertyWrapper.DefaultValueCategory.WordsCollected,K2Node_VariableGet.DefaultValueCategory.wordRequired,K2Node_VariableGet.DefaultValueCategory.WordsCollected,
@@ -353,7 +353,7 @@ BP_PROP_campfire_01_C=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMes
 RestartLevel1Underneath_C=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,PropertyWrapper.DefaultValueCategory.lettersCollected,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 
 [EditorStartup]
-LastLevel=/Game/DragonWord/MAP/LevelTwo
+LastLevel=/Game/DragonWord/MAP/LevelOne
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
@@ -2371,8 +2371,6 @@ ExponentialHeightFogComponent.VolumetricFog=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/DragonWord/BPObjects/GoToLevel3.GoToLevel3
-OpenAssetsAtExit=/Game/DragonWord/Player/StefanoPlayer.StefanoPlayer
 
 [RootWindow]
 ScreenPosition=X=853.000 Y=161.000
@@ -2410,7 +2408,7 @@ ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserTab1.SelectedPaths=/Game/DragonWord/MAP
-ContentBrowserTab1.SelectedPaths=/Game/DragonWord/BPObjects
+ContentBrowserTab1.SelectedPaths=/Game/DragonWord/MAP
 None=======
 None=======
 None=======
@@ -3547,32 +3545,32 @@ RecentsFiles=C:/Program Files/Unreal/UE_5.1/Engine/Plugins/Animation/ControlRig/
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
-MRUItem0=/Game/DragonWord/MAP/LevelTwo
+MRUItem0=/Game/DragonWord/MAP/LevelOne
 MRUItem1=/Game/DragonWord/MAP/LevelThree
-MRUItem2=/Game/DragonWord/MAP/LevelOne
+MRUItem2=/Game/DragonWord/MAP/LevelTwo
 MRUItem3=/Game/DragonWord/MAP/TestMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/DragonWord/Player/StefanoPlayer
-MRUItem1=/Game/DragonWord/BPObjects/GoToLevel3
+MRUItem0=/Game/DragonWord/MAP/LevelOne
+MRUItem1=/Game/DragonWord/MAP/LevelThree
 MRUItem2=/Game/DragonWord/MAP/LevelTwo
-MRUItem3=/Game/DragonWord/BPObjects/RestartLevel1Underneath_Child
-MRUItem4=/Game/DragonWord/BPObjects/RestartLevel1Underneath
-MRUItem5=/Game/DragonWord/MAP/LevelOne
-MRUItem6=/Game/DragonWord/BPObjects/WordsToCollect
-MRUItem7=/Game/DragonWord/BPObjects/Word
-MRUItem8=/Game/DragonWord/BPObjects/FinalGateLV1
-MRUItem9=/Game/DragonWord/InterfaceFunctions/OpenDoorWithLetters
-MRUItem10=/Game/DragonWord/InterfaceFunctions/OpenDoorsWithWords
-MRUItem11=/Game/DragonWord/BPObjects/FinalGateLV2
-MRUItem12=/Game/DragonWord/Player/BP_WizardPlayer1
-MRUItem13=/Game/DragonWord/BPObjects/RestartTheLevel2
-MRUItem14=/Game/DragonWord/BPObjects/RestartTheLevel2Underneath
-MRUItem15=/Game/DragonWord/BPObjects/Switch
-MRUItem16=/Game/DragonWord/BPObjects/RestartTheLevel
-MRUItem17=/Game/DragonWord/InputSystem/IM_Input
-MRUItem18=/Game/DragonWord/InputSystem/SteInteraction
-MRUItem19=/Game/DragonWord/BPObjects/PlatformBrickLnR
+MRUItem3=/Game/DragonWord/Player/StefanoPlayer
+MRUItem4=/Game/DragonWord/BPObjects/GoToLevel3
+MRUItem5=/Game/DragonWord/BPObjects/RestartLevel1Underneath_Child
+MRUItem6=/Game/DragonWord/BPObjects/RestartLevel1Underneath
+MRUItem7=/Game/DragonWord/BPObjects/WordsToCollect
+MRUItem8=/Game/DragonWord/BPObjects/Word
+MRUItem9=/Game/DragonWord/BPObjects/FinalGateLV1
+MRUItem10=/Game/DragonWord/InterfaceFunctions/OpenDoorWithLetters
+MRUItem11=/Game/DragonWord/InterfaceFunctions/OpenDoorsWithWords
+MRUItem12=/Game/DragonWord/BPObjects/FinalGateLV2
+MRUItem13=/Game/DragonWord/Player/BP_WizardPlayer1
+MRUItem14=/Game/DragonWord/BPObjects/RestartTheLevel2
+MRUItem15=/Game/DragonWord/BPObjects/RestartTheLevel2Underneath
+MRUItem16=/Game/DragonWord/BPObjects/Switch
+MRUItem17=/Game/DragonWord/BPObjects/RestartTheLevel
+MRUItem18=/Game/DragonWord/InputSystem/IM_Input
+MRUItem19=/Game/DragonWord/InputSystem/SteInteraction
 
 [LandscapeEdit]
 PaintToolStrength=0.300000012
