--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -170,7 +170,7 @@ None=======
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,
 K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.ComboStruct,
 CapsuleComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,
-SceneComponent=
+SceneComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,
 Landscape=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,
 StaticMeshActor=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,
 Info=PropertyWrapper.DefaultValueCategory.ComboStruct,
@@ -2184,7 +2184,7 @@ CleanShutdown=True
 ScreenPosition=X=853.000 Y=161.000
 ScreenPosition=X=0.000 Y=68.000
 WindowSize=X=1701.000 Y=720.000
-WindowSize=X=1288.800 Y=728.800
+WindowSize=X=1290.400 Y=730.400
 InitiallyMaximized=False
 InitiallyMaximized=True
 None=======
@@ -2289,7 +2289,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/DragonWord/Materials
-ContentBrowserDrawer.SelectedPaths=/Game/Fantastic_Village_Pack/meshes/props/deco
+ContentBrowserDrawer.SelectedPaths=/Game/DragonWord/MAP
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
