--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -17,7 +17,7 @@ bSCSEditorShowFloor=False
 bAlwaysBuildUAT=True
 SCSViewportCameraSpeed=4
 AssetViewerProfileName=
-PreviewFeatureLevel=3
+PreviewFeatureLevel=4
 PreviewPlatformName=None
 PreviewShaderFormatName=None
 PreviewShaderPlatformName=None
@@ -2203,9 +2203,9 @@ None=======
 
 [RootWindow]
 ScreenPosition=X=853.000 Y=161.000
-ScreenPosition=X=0.000 Y=68.000
+ScreenPosition=X=-1590.000 Y=158.000
 WindowSize=X=1701.000 Y=720.000
-WindowSize=X=1293.600 Y=733.600
+WindowSize=X=1294.000 Y=734.000
 InitiallyMaximized=False
 InitiallyMaximized=True
 None=======
@@ -2240,7 +2240,7 @@ ContentBrowserTab1.SelectedPaths=/Game/DragonWord/InterfaceFunctions
 ContentBrowserTab1.SelectedPaths=/Game/UltimateFarming/Meshes
 ContentBrowserTab1.SelectedPaths=/Game/Fantastic_Village_Pack/meshes/props/vehicles
 ContentBrowserTab1.SelectedPaths=/Game/DragonWord
-ContentBrowserTab1.SelectedPaths=/Game/UI
+ContentBrowserTab1.SelectedPaths=/Game/DragonWord/Player
 None=======
 None=======
 None=======
@@ -3376,8 +3376,8 @@ D3D11RHI.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Unreal/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Unreal/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
